# DeepMCPAgent

./: .editorconfig  .env.example  .gitignore  .org-profile-README.md  .pre-commit-config.yaml  404.html  CHANGELOG.md  CHECKLIST.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  index.html  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  docs.yml  publish.yml  test.yml
api/agent/: index.html
api/config/: index.html
api/cross-agent/: index.html
api/mcp-client/: index.html
api/mcp-server/: index.html
api/memory/: index.html
api/observability/: index.html
api/prompts/: index.html
api/rag/: index.html
api/runtime/: index.html
api/sandbox/: index.html
api/superagent/: index.html
api/utilities/: index.html
core/: index.html
core/adaptive-strategy/: index.html
core/approval/: index.html
core/approval-classifier/: index.html
core/cache/: index.html
core/callback-handler/: index.html
core/cli/: index.html
core/config/: index.html
core/context-engine/: index.html
core/conversations/: index.html
core/default-prompt/: index.html
core/engine/: index.html
core/engine-edges/: index.html
core/engine-flags/: index.html
core/engine-hooks/: index.html
core/engine-internals/: index.html
core/engine-nodes/: index.html
core/engine-prebuilts/: index.html
core/engine-processors/: index.html
core/engine-serialization/: index.html
core/engine-skills/: index.html
core/engine-tools/: index.html
core/env-resolver/: index.html
core/events/: index.html
core/exceptions/: index.html
core/fallback/: index.html
core/guardrails/: index.html
core/memory/: index.html
core/observability/: index.html
core/rag/: index.html
core/sandbox/: index.html
core/skill-registry/: index.html
core/streaming/: index.html
core/tool-optimization/: index.html
core/tools/: index.html
core/types/: index.html
docs/: CNAME  faq.md  index.md  robots.txt
docs/api/: agent.md  config.md  cross-agent.md  mcp-client.md  mcp-server.md  memory.md  observability.md  prompts.md  rag.md  runtime.md  sandbox.md  superagent.md  utilities.md
docs/assets/: social-preview.html
docs/core/: adaptive-strategy.md  approval-classifier.md  approval.md  cache.md  callback-handler.md  cli.md  config.md  context-engine.md  conversations.md  default-prompt.md  engine-edges.md  engine-flags.md  engine-hooks.md  engine-internals.md  engine-nodes.md  engine-prebuilts.md  engine-processors.md  engine-serialization.md  engine-skills.md  engine-tools.md  engine.md  env-resolver.md  events.md  exceptions.md  fallback.md  guardrails.md  index.md  memory.md  observability.md  rag.md  sandbox.md  skill-registry.md  streaming.md  tool-optimization.md  tools.md  types.md
docs/getting-started/: best-llms-for-agents.md  concepts.md  glossary.md  installation-extras.md  model-setup.md  quickstart.md  what-is-mcp.md  why-promptise.md
docs/guides/: agentic-runtime.md  building-agents.md  custom-reasoning.md  index.md  lab-code-review.md  lab-customer-support.md  lab-data-analysis.md  lab-pipeline-observer.md  multi-agent-teams.md  multi-user-identity.md  multi-user-systems.md  production-mcp-servers.md  prompt-engineering.md
docs/mcp/: index.md
docs/prompting/: blocks.md  builder.md  chaining.md  context.md  flows.md  guards.md  index.md  inspector.md  loader-templates.md  shell-interpolation.md  strategies.md  suite-registry.md  testing.md
docs/resources/: changelog.md  contributing.md  examples.md  migration.md  showcase.md  submit-project.md
docs/runtime/: api.md  cli.md  configuration.md  context.md  conversation.md  dashboard.md  hooks.md  index.md  lifecycle.md  manifests.md  meta-tools.md  processes.md  runtime-manager.md
docs/stylesheets/: extra.css
examples/: use_cross_agent.py
examples/adaptive/: learning_agent.py
examples/approval/: auto_classifier.py
examples/hooks/: lifecycle_hooks.py
examples/mcp/: enterprise_cli.py  enterprise_server.py
examples/memory/: multiuser_chat.py
examples/production/: demo.py  server.py
examples/prompts/: conversation_flow.py
examples/rag/: basic_rag.py
examples/reasoning/: research_agent.py
faq/: index.html
guides/: index.html
mcp/: index.html
overrides/: main.html
prompting/: index.html
runtime/: index.html
scripts/: generate-social-preview.py
search/: search_index.json
tests/: _e2e_40tool_server.py  _e2e_mcp_server.py  _e2e_reasoning_server.py  conftest.py  e2e_guardrails_chat.py  run_semantic_e2e.py  test_approval.py  test_approval_classifier.py  test_benchmark_data_analysis.py  test_benchmark_promptise_vs_langgraph.py  test_benchmark_specialized_graph.py  test_cache.py  test_callback_handler.py  test_cli_parse.py  test_config.py  test_context_engine.py  test_conversations.py  test_cross_agent.py  test_distributed_runtime.py  test_e2e_core_agent.py  test_e2e_cross_subsystem.py  test_e2e_mcp_client.py  test_e2e_mcp_server.py  test_e2e_prompt_loader.py  test_e2e_prompts_core.py  test_e2e_prompts_flows.py  test_e2e_reasoning_graph.py  test_e2e_runtime.py  test_e2e_sandbox.py  test_e2e_semantic_tool_selection.py  test_engine.py  test_engine_base.py  test_engine_execution.py  test_engine_hooks.py  test_engine_mcp_integration.py  test_engine_processors.py  test_env_resolver.py  test_events.py  test_fallback.py  test_guardrails.py  (+72 more)
(+285 files in other folders)
